# workspace-cli

./: Cargo.toml  LICENSE  README.md  README.zh.md  build.sh  test.sh
src/: cli.rs  main.rs  tui.rs  workspace.rs
