[package]
name = "workspace-cli"
version = "1.0.1"
edition = "2021"
description = "Manage multiple repos as a virtual workspace via symlinks, streamline multi-repo dev workflows easily."
authors = ["vvyc"]
license = "MIT"
repository = "https://github.com/vvycaaa/workspace-cli"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
dirs = "5.0"
colored = "2.0"
dialoguer = "0.11"
